landing page fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,7 @@ h5{
   background-color: greenyellow;
 }
 
+.danger-height{
+  height: 70vh
+}
+
